Navbar overlap fixed.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,10 @@
  *= #require_tree .
  */
 
+body {
+  padding-top: 6.4em;
+}
+
 .notice {
   color: #000000;
   padding-top: 8em;
